[workspace]
members = [".", "lib", "lib/macros"]

[package]
name = "grand-line"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]
mysql = ["sea-orm/sqlx-mysql", "sqlx/mysql"]
postgres = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
axum = ["dep:axum", "dep:async-graphql-axum", "dep:tower", "dep:tower-http"]

[dependencies]
# local
grand-line-macros = { path = "lib/macros" }
grand-line-proc-macros = { path = "lib" }

# common
async-graphql = { version = "7.0.11", default-features = false, features = ["altair", "chrono", "chrono-duration", "chrono-tz", "dataloader", "decimal", "string_number"] }
chrono = { version = "0.4.37", default-features = false, features = ["now", "serde"] }
paste = { version = "1.0.15", default-features = false }
proc-macro2 = { version = "1.0.86", default-features = false }
quote = { version = "1.0.37", default-features = false }
sea-orm = { version = "1.0.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "with-chrono", "with-json", "with-rust_decimal"] }
serde = { version = "1.0.210", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.128", default-features = false }
serde_with = { version = "3.10.0", default-features = false, features = ["macros"] }
sqlx = { version = "0.7.4", default-features = false, features = ["chrono", "json", "macros", "migrate", "runtime-tokio-rustls", "rust_decimal"] }
tokio = { version = "1.40.0", default-features = false, features = ["full"] }
ulid = { version = "1.1.3", default-features = false, features = ["std"] }

# axum
async-graphql-axum = { version = "7.0.11", default-features = false, optional = true }
axum = { version = "0.7.7", default-features = false, optional = true, features = ["default", "http2", "tokio", "multipart"] }
tower = { version = "0.5.1", default-features = false, optional = true }
tower-http = { version = "0.6.1", default-features = false, optional = true, features = ["normalize-path"] }
