[package]
name = "grand-line-proc-macros"
version = "0.0.0"
edition = "2021"

[lib]
name = "grand_line_proc_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
grand-line-macros = { path = "macros" }
heck = "0.5.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = "1.0.128"
syn = { version = "2.0.79", features = ["full"] }
